--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,15 +9,13 @@ import Testimonials from "@/components/landing/Testimonials.astro";
 import Pricing from "@/components/landing/Pricing.astro";
 import Faq from "@/components/landing/Faq.astro";
 import Cta from "@/components/global/Cta.astro";
+import Contact from "../components/landing/Contact.astro";
 ---
 <BaseLayout>
   <Hero />
-  <LogoCloud />
   <Work />
   <Howitworks />
-  <AllScope />
-  <Testimonials />
   <Pricing />
   <Faq />
-  <Cta />
+  <Contact />
 </BaseLayout>
