--- a/src/components/landing/Howitworks.astro
+++ b/src/components/landing/Howitworks.astro
@@ -1,24 +1,353 @@
-<section class="scroll-mt-12" id="how">
-  <div class="px-8 md:px-12 py-12 max-w-2xl mx-auto">
-    <div>
-     <h2
-        class="text-2xl tracking-tighter  font-light lg:text-4xl text-black"
-      >
-    How it works
-      </h2>
+---
+import {designwork} from "../../data/designwork.json";
+---
+<section class="scroll-mt-24" id="how">
+
+
+    <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
+        <div class="p-8 bg-black rounded-3xl">
+            <div class="inline-flex items-center  w-full border-white/10">
+                <p class="text-3xl text-white">Pastas</p>
+            </div>
+        </div>
+
+        <div class=" py-5 max-w-2xl mx-auto">
+
+            <div x-data="{selected:null}">
+                <ul
+                        class="list-none text-black bg-white rounded-3xl divide-y mt-8"
+                        role="list"
+                        @click="open = !open"
+                >
+                    <li class="relative">
+                        <button
+                                class="w-full p-4 text-left"
+                                @click="selected !== 1 ? selected = 1 : selected = null"
+                                type="button"
+                        >
+                            <div class="items-center flex justify-between text-black">
+                                <p class="text-lg tracking-tight text-black">
+                                    Fideos
+                                </p>
+                                <svg
+                                        class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
+                                        fill="currentColor"
+                                        viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        :class="{'rotate-180': open, 'rotate-0': !open}"
+                                >
+                                    <path
+                                            d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+                                            clip-rule="evenodd"
+                                            fill-rule="evenodd"></path>
+                                </svg
+                                >
+                            </div>
+                        </button
+                        >
+                        <div
+                                class="relative overflow-hidden duration-700 max-h-0 transition-all"
+                                style=""
+                                x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+                                x-ref="container1"
+                        >
+                            <div class="text-sm text-zinc-500 p-8 pt-0">
+                                <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
+                                     role="option" x-bind="disableNextAndPreviousButtons">
+                                    <img src="/fideos.png" alt=""
+                                         style="border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;"/>
+                                </div>
+                                <br>
+
+                                <table class="w-full border border-gray-200 divide-y divide-gray-200">
+                                    <thead class="bg-gray-50">
+                                    <tr>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                            Tallarines o
+                                            Spaguettis
+                                        </th>
+                                        <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                            1 kg = 6
+                                            porciones
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody class="divide-y divide-gray-200">
+                                    <tr>
+                                        <td class="px-6 py-4">Fideos al Huevo</td>
+                                        <td class="px-6 py-4 text-right">$6000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-6 py-4">Fideos de Espinaca</td>
+                                        <td class="px-6 py-4 text-right">$7000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-6 py-4">Fideos de Morrón</td>
+                                        <td class="px-6 py-4 text-right">$7000</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </li>
+                    <li class="relative">
+                        <button
+                                class="w-full p-4 text-left"
+                                @click="selected !== 2 ? selected = 2 : selected = null"
+                                type="button"
+                        >
+                            <div class="items-center flex justify-between text-black">
+                                <p class="text-lg tracking-tight text-black">
+                                    Ñoquis
+                                </p>
+                                <svg
+                                        class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
+                                        fill="currentColor"
+                                        viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        :class="{'rotate-180': open, 'rotate-0': !open}"
+                                >
+                                    <path
+                                            d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+                                            clip-rule="evenodd"
+                                            fill-rule="evenodd"></path>
+                                </svg
+                                >
+                            </div>
+                        </button
+                        >
+                        <div
+                                class="relative overflow-hidden duration-700 max-h-0 transition-all"
+                                style=""
+                                x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                                x-ref="container2"
+                        >
+                            <div class="text-sm text-zinc-500 p-8 pt-0">
+                                minimal uses Breeew for project management, ensuring seamless
+                                communication and collaboration.
+                            </div>
+                        </div>
+                    </li>
+                    <li class="relative">
+                        <button
+                                class="w-full p-4 text-left"
+                                @click="selected !== 3 ? selected = 3 : selected = null"
+                                type="button"
+                        >
+                            <div class="items-center flex justify-between text-black">
+                                <p class="text-lg tracking-tight text-black">
+                                    Ravioles
+                                </p>
+                                <svg
+                                        class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
+                                        fill="currentColor"
+                                        viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        :class="{'rotate-180': open, 'rotate-0': !open}"
+                                >
+                                    <path
+                                            d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+                                            clip-rule="evenodd"
+                                            fill-rule="evenodd"></path>
+                                </svg
+                                >
+                            </div>
+                        </button
+                        >
+                        <div
+                                class="relative overflow-hidden duration-700 max-h-0 transition-all"
+                                style=""
+                                x-bind:style="selected == 3 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                                x-ref="container2"
+                        >
+                            <div class="text-sm text-zinc-500 p-8 pt-0">
+                                Expect the initial concept within 2-3 days, and minimal will make
+                                revisions until it meets your complete satisfaction. For bigger
+                                projects it can take up to 4 weeks.
+                            </div>
+                        </div>
+                    </li>
+                    <li class="relative">
+                        <button
+                                class="w-full p-4 text-left"
+                                @click="selected !== 4 ? selected = 4 : selected = null"
+                                type="button"
+                        >
+                            <div class="items-center flex justify-between text-black">
+                                <p class="text-lg tracking-tight text-black">
+                                    Canelones
+                                </p>
+                                <svg
+                                        class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
+                                        fill="currentColor"
+                                        viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        :class="{'rotate-180': open, 'rotate-0': !open}"
+                                >
+                                    <path
+                                            d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+                                            clip-rule="evenodd"
+                                            fill-rule="evenodd"></path>
+                                </svg
+                                >
+                            </div>
+                        </button
+                        >
+                        <div
+                                class="relative overflow-hidden duration-700 max-h-0 transition-all"
+                                style=""
+                                x-bind:style="selected == 4 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                                x-ref="container2"
+                        >
+                            <div class="text-sm text-zinc-500 p-8 pt-0">
+                                minimal believes in providing the best possible service to
+                                clients, and to ensure that, minimal has decided to limit the
+                                workload to just two projects at a time. This approach allows
+                                minimal to dedicate it's full attention and expertise to each
+                                project, ensuring quality and timely delivery.
+                            </div>
+                        </div>
+                    </li>
+
+
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="p-8 bg-red-700 rounded-3xl">
+            <div class="inline-flex items-center w-full border-white/10">
+                <p class="text-2xl text-white">Fideos</p>
+            </div>
+        </div>
+
+        <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
+             x-bind="disableNextAndPreviousButtons">
+            <img src="/bal.png" alt=""/>
+        </div>
+
+        <table class="w-full border border-gray-200 divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tallarines o
+                    Spaguettis
+                </th>
+                <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">1 kg = 6
+                    porciones
+                </th>
+            </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-200">
+            <tr>
+                <td class="px-6 py-4">Fideos al Huevo</td>
+                <td class="px-6 py-4 text-right">$6000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Fideos de Espinaca</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Fideos de Morrón</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <br>
+        <br>
+        <br>
+
+
+        <div class="p-8 bg-red-700 rounded-3xl">
+            <div class="inline-flex items-center w-full border-white/10">
+                <p class="text-2xl text-white">Ñoquis</p>
+            </div>
+        </div>
+        <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
+             x-bind="disableNextAndPreviousButtons">
+            <img src="/bal.png" alt=""/>
+        </div>
+
+        <table class="w-full border border-gray-200 divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ñoquis
+                </th>
+                <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">1 kg = 3
+                    porciones
+                </th>
+            </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-200">
+            <tr>
+                <td class="px-6 py-4">Ñoquis de papa</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Noquis de espinaca</td>
+                <td class="px-6 py-4 text-right">$7500</td>
+            </tr>
+            </tbody>
+        </table>
+
+
+        <br>
+        <br>
+        <br>
+
+
+        <div class="p-8 bg-red-700 rounded-3xl">
+            <div class="inline-flex items-center w-full border-white/10">
+                <p class="text-2xl text-white">Ravioles</p>
+            </div>
+        </div>
+        <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
+             x-bind="disableNextAndPreviousButtons">
+            <img src="/bal.png" alt=""/>
+        </div>
+
+        <table class="w-full border border-gray-200 divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ravioles
+                </th>
+                <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">1 caja (2
+                    planchas) = 3
+                    porciones
+                </th>
+            </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-200">
+            <tr>
+                <td class="px-6 py-4">Verdura y carne</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Verdura y ricota</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Verdura y Pollo</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Pollo y queso</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Ricota y queso</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Ricota y queso de cabra</td>
+                <td class="px-6 py-4 text-right">$7000</td>
+            </tr>
+            <tr>
+                <td class="px-6 py-4">Ricota, Queso y jamón</td>
+                <td class="px-6 py-4 text-right">$7500</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    <div>
-      <p class="text-sm text-zinc-500 mt-8">
-        Once you join, you and your crew get an invite to our Breeew kanban board, where you can team up with minimal in real-time. From here, you can chat directly with minimal, shooting over as many design requests as you fancy.
-        <br /><br />
-        I'll tackle each request step by step, and feel free to ask for as many tweaks as you need.
-
-
-
-
-
-
-      </p>
-    </div>
-  </div>
 </section>
