--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -4,8 +4,8 @@
 
   <div class="flex flex-col items-center justify-center relative z-10">
     <img src="/logo.svg" class="w-100 mb-6">
-    <h2 class="text-5xl mt-12 tracking-tighter font-normal text-black text-center">
-      De nuestra familia a la tuya
+    <h2 class="text-3xl mt-12 tracking-tighter font-normal text-black text-center">
+     DE NUESTRA FAMILIA A LA TUYA
     </h2>
   </div>
 
