--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -17,32 +17,69 @@ import {designwork} from "../../data/designwork.json";
       <img src="/bal.png" alt=""/>
     </div>
 
-    <table class="w-full border border-gray-200 divide-y divide-gray-200">
-      <thead class="bg-gray-50">
+    <table class="w-full divide-y divide-gray-200">
+      <thead class="bg-red-700">
       <tr>
-        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tallarines o
-          Spaguettis
+        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
+          Detalle
         </th>
-        <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">1 kg = 6
-          porciones
+        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+          Cantidad
+        </th>
+        <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
+          Precio
         </th>
       </tr>
       </thead>
       <tbody class="divide-y divide-gray-200">
       <tr>
-        <td class="px-6 py-4">Fideos al Huevo</td>
+        <td class="px-6 py-4">Empanadas Árabes</td>
+        <td class="px-6 py-4">Docena</td>
         <td class="px-6 py-4 text-right">$6000</td>
       </tr>
       <tr>
-        <td class="px-6 py-4">Fideos de Espinaca</td>
-        <td class="px-6 py-4 text-right">$7000</td>
+        <td class="px-6 py-4">Carne</td>
+        <td class="px-6 py-4">Docena</td>
+        <td class="px-6 py-4 text-right">$1000</td>
       </tr>
       <tr>
-        <td class="px-6 py-4">Fideos de Morrón</td>
-        <td class="px-6 py-4 text-right">$7000</td>
+        <td class="px-6 py-4">Pollo</td>
+        <td class="px-6 py-4">Docena</td>
+        <td class="px-6 py-4 text-right">$1000</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Discos para empanadas</td>
+        <td class="px-6 py-4">2 Unidades</td>
+        <td class="px-6 py-4 text-right">$2000</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Pascualina</td>
+        <td class="px-6 py-4">Docena</td>
+        <td class="px-6 py-4 text-right">$2500</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Panqueques</td>
+        <td class="px-6 py-4">Docena</td>
+        <td class="px-6 py-4 text-right">$6000</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Masa para lasagna</td>
+        <td class="px-6 py-4">Unidad (200 gr.)</td>
+        <td class="px-6 py-4 text-right">$2000</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Queso rallado</td>
+        <td class="px-6 py-4">1 Kg.</td>
+        <td class="px-6 py-4 text-right">$1600</td>
+      </tr>
+      <tr>
+        <td class="px-6 py-4">Crema de leche</td>
+        <td class="px-6 py-4">100 gr.</td>
+        <td class="px-6 py-4 text-right">$2000</td>
       </tr>
       </tbody>
     </table>
+
 
 
 
