--- a/src/components/landing/Howitworks.astro
+++ b/src/components/landing/Howitworks.astro
@@ -4,14 +4,14 @@ import {designwork} from "../../data/designwork.json";
 <section class="scroll-mt-24" id="how">
 
 
-    <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
+    <div class="px-8 md:px-12  max-w-2xl mx-auto">
         <div class="p-8 bg-black rounded-3xl">
             <div class="inline-flex items-center  w-full border-white/10">
                 <p class="text-3xl text-white">Salsas</p>
             </div>
         </div>
 
-        <div class=" py-5 max-w-2xl mx-auto">
+        <div class="max-w-2xl mx-auto">
 
             <div x-data="{selected:null}">
                 <ul
@@ -27,7 +27,8 @@ import {designwork} from "../../data/designwork.json";
                         >
                             <div class="items-center flex justify-between text-black">
                                 <p class="text-lg tracking-tight text-black">
-                                    Salsas Rojas
+                                    Salsas rojas
+
                                 </p>
                                 <svg
                                         class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
@@ -51,39 +52,37 @@ import {designwork} from "../../data/designwork.json";
                                 x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
                                 x-ref="container1"
                         >
-                            <div class="text-sm text-zinc-500 p-8 pt-0">
+                            <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
                                     <img src="/fideos.png" alt=""
-                                         style="border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;"/>
+                                         style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
 
-                                <table class="w-full border border-gray-200 divide-y divide-gray-200">
-                                    <thead class="bg-gray-50">
+                                <table class="w-full divide-y divide-gray-200">
+                                    <thead class="bg-red-700">
                                     <tr>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Tallarines o
-                                            Spaguettis
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
+                                            500 gramos para 4 porciones
                                         </th>
-                                        <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            1 kg = 6
-                                            porciones
+                                        <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
+                                            500 gramos
                                         </th>
                                     </tr>
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4">Fideos al Huevo</td>
-                                        <td class="px-6 py-4 text-right">$6000</td>
+                                        <td class="px-6 py-4">Bolognesa</td>
+                                        <td class="px-6 py-4 text-right">$4000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Fideos de Espinaca</td>
-                                        <td class="px-6 py-4 text-right">$7000</td>
+                                        <td class="px-6 py-4">Tuco</td>
+                                        <td class="px-6 py-4 text-right">$3100</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Fideos de Morrón</td>
-                                        <td class="px-6 py-4 text-right">$7000</td>
+                                        <td class="px-6 py-4">Salsa con pollo</td>
+                                        <td class="px-6 py-4 text-right">$3600</td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -99,7 +98,7 @@ import {designwork} from "../../data/designwork.json";
                         >
                             <div class="items-center flex justify-between text-black">
                                 <p class="text-lg tracking-tight text-black">
-                                    Salsas Especiales
+                                    Salsas especiales
                                 </p>
                                 <svg
                                         class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
@@ -120,42 +119,40 @@ import {designwork} from "../../data/designwork.json";
                         <div
                                 class="relative overflow-hidden duration-700 max-h-0 transition-all"
                                 style=""
-                                x-bind:style="selected == 2 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
-                                x-ref="container1"
+                                x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                                x-ref="container2"
                         >
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
                                     <img src="/fideos.png" alt=""
-                                         style="border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;"/>
+                                         style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
 
-                                <table class="w-full border border-gray-200 divide-y divide-gray-200">
-                                    <thead class="bg-gray-50">
+                                <table class="w-full divide-y divide-gray-200">
+                                    <thead class="bg-red-700">
                                     <tr>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Tallarines o
-                                            Spaguettis
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
+                                            300 gramos para 2 porciones
                                         </th>
-                                        <th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            1 kg = 6
-                                            porciones
+                                        <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
+                                            300 gramos
                                         </th>
                                     </tr>
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4">Fideos al Huevo</td>
-                                        <td class="px-6 py-4 text-right">$6000</td>
+                                        <td class="px-6 py-4">Crema de leche, champignones y carne
+
+                                        </td>
+                                        <td class="px-6 py-4 text-right">$5000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Fideos de Espinaca</td>
-                                        <td class="px-6 py-4 text-right">$7000</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="px-6 py-4">Fideos de Morrón</td>
-                                        <td class="px-6 py-4 text-right">$7000</td>
+                                        <td class="px-6 py-4">Crema de leche, champignones y pollo
+
+                                        </td>
+                                        <td class="px-6 py-4 text-right">$5000</td>
                                     </tr>
                                     </tbody>
                                 </table>
