--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -17,7 +17,7 @@ import {designwork} from "../../data/designwork.json";
       <img src="/bal.png" alt=""/>
     </div>
 
-    <table class="w-full divide-y divide-gray-200">
+    <table class="w-full divide-y divide-gray-200 p-8">
       <thead class="bg-red-700">
       <tr>
         <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
