--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -4,85 +4,84 @@ import {designwork} from "../../data/designwork.json";
 <section class="scroll-mt-24" id="pricing">
 
 
-  <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
-    <div class="p-8 bg-black rounded-3xl">
-      <div class="inline-flex items-center  w-full border-white/10">
-        <p class="text-3xl text-white">Extras</p>
-      </div>
+    <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
+        <div class="p-8 bg-black rounded-3xl">
+            <div class="inline-flex items-center  w-full border-white/10">
+                <p class="text-3xl text-white">Extras</p>
+            </div>
+        </div>
+
+
+        <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
+             x-bind="disableNextAndPreviousButtons">
+            <img src="/bal.png" alt=""/>
+        </div>
+
+        <div class="bg-white rounded-3xl">
+
+            <table class="w-full divide-y divide-gray-200 ">
+                <thead class="bg-red-700">
+                <tr>
+                    <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
+                        Detalle
+                    </th>
+                    <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+                        Cantidad
+                    </th>
+                    <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
+                        Precio
+                    </th>
+                </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200">
+                <tr>
+                    <td class="px-6 py-4">Empanadas Árabes</td>
+                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Carne</td>
+                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4 text-right">$1000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Pollo</td>
+                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4 text-right">$1000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Discos para empanadas</td>
+                    <td class="px-6 py-4">2 Unidades</td>
+                    <td class="px-6 py-4 text-right">$2000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Pascualina</td>
+                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4 text-right">$2500</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Panqueques</td>
+                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Masa para lasagna</td>
+                    <td class="px-6 py-4">Unidad (200 gr.)</td>
+                    <td class="px-6 py-4 text-right">$2000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Queso rallado</td>
+                    <td class="px-6 py-4">1 Kg.</td>
+                    <td class="px-6 py-4 text-right">$1600</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Crema de leche</td>
+                    <td class="px-6 py-4">100 gr.</td>
+                    <td class="px-6 py-4 text-right">$2000</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
-
-
-    <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
-         x-bind="disableNextAndPreviousButtons">
-      <img src="/bal.png" alt=""/>
-    </div>
-
-    <table class="w-full divide-y divide-gray-200 p-8">
-      <thead class="bg-red-700">
-      <tr>
-        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
-          Detalle
-        </th>
-        <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
-          Cantidad
-        </th>
-        <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
-          Precio
-        </th>
-      </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200">
-      <tr>
-        <td class="px-6 py-4">Empanadas Árabes</td>
-        <td class="px-6 py-4">Docena</td>
-        <td class="px-6 py-4 text-right">$6000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Carne</td>
-        <td class="px-6 py-4">Docena</td>
-        <td class="px-6 py-4 text-right">$1000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Pollo</td>
-        <td class="px-6 py-4">Docena</td>
-        <td class="px-6 py-4 text-right">$1000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Discos para empanadas</td>
-        <td class="px-6 py-4">2 Unidades</td>
-        <td class="px-6 py-4 text-right">$2000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Pascualina</td>
-        <td class="px-6 py-4">Docena</td>
-        <td class="px-6 py-4 text-right">$2500</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Panqueques</td>
-        <td class="px-6 py-4">Docena</td>
-        <td class="px-6 py-4 text-right">$6000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Masa para lasagna</td>
-        <td class="px-6 py-4">Unidad (200 gr.)</td>
-        <td class="px-6 py-4 text-right">$2000</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Queso rallado</td>
-        <td class="px-6 py-4">1 Kg.</td>
-        <td class="px-6 py-4 text-right">$1600</td>
-      </tr>
-      <tr>
-        <td class="px-6 py-4">Crema de leche</td>
-        <td class="px-6 py-4">100 gr.</td>
-        <td class="px-6 py-4 text-right">$2000</td>
-      </tr>
-      </tbody>
-    </table>
-
-
-
-
-
-  </div>
 </section>
