--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,14 +1,10 @@
-<section class="overflow-hidden relative ">
-  <img src="/home.png" class="w-screen  object-cover object-center">
-
+<section class="overflow-hidden relative">
+  <img src="/home.png" class="w-screen object-cover object-center">
 
   <div class="flex flex-col items-center justify-center relative z-10">
-    <img src="/logo.svg" class="w-100 mb-6">
-    <h2 class="text-2xl mt-12 tracking-tighter font-normal text-black text-center">
-     DE NUESTRA FAMILIA A LA TUYA
+    <img src="/logo.svg" class="w-100 mb-6 md:relative  md:absolute md:bottom-12">
+    <h2 class="text-2xl tracking-tighter font-normal text-black text-center">
+      DE NUESTRA FAMILIA A LA TUYA
     </h2>
   </div>
-
-
-
 </section>
