--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -17,7 +17,7 @@ import {designwork} from "../../data/designwork.json";
             <img src="/bal.png" alt=""/>
         </div>
 
-        <div class="bg-white rounded-3xl">
+        <div class="bg-white mx-auto rounded-3xl">
 
             <table class="w-full divide-y divide-gray-200 ">
                 <thead class="bg-red-700">
