--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -23,10 +23,7 @@ import {designwork} from "../../data/designwork.json";
                 <thead class="bg-red-700">
                 <tr>
                     <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
-                        Detalle
-                    </th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
-                        Cantidad
+                        Detalle/Cantidad
                     </th>
                     <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
                         Precio
@@ -35,48 +32,39 @@ import {designwork} from "../../data/designwork.json";
                 </thead>
                 <tbody class="divide-y divide-gray-200">
                 <tr>
-                    <td class="px-6 py-4">Empanadas Árabes</td>
-                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4">Empanadas Árabes (docena)</td>
                     <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Carne</td>
-                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4">Carne (docena)</td>
                     <td class="px-6 py-4 text-right">$1000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Pollo</td>
-                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4">Pollo (docena)</td>
                     <td class="px-6 py-4 text-right">$1000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Discos para empanadas</td>
-                    <td class="px-6 py-4">2 Unidades</td>
+                    <td class="px-6 py-4">Discos para empanadas (2 unidades)</td>
                     <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Pascualina</td>
-                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4">Pascualina (docena)</td>
                     <td class="px-6 py-4 text-right">$2500</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Panqueques</td>
-                    <td class="px-6 py-4">Docena</td>
+                    <td class="px-6 py-4">Panqueques (docena)</td>
                     <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Masa para lasagna</td>
-                    <td class="px-6 py-4">Unidad (200 gr.)</td>
+                    <td class="px-6 py-4">Masa para lasagna (unidad - 200 gramos)</td>
                     <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Queso rallado</td>
-                    <td class="px-6 py-4">1 Kg.</td>
+                    <td class="px-6 py-4">Queso rallado (1 kg)</td>
                     <td class="px-6 py-4 text-right">$1600</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Crema de leche</td>
-                    <td class="px-6 py-4">100 gr.</td>
+                    <td class="px-6 py-4">Crema de leche (100 gr)</td>
                     <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 </tbody>
