--- a/src/components/landing/Contact.astro
+++ b/src/components/landing/Contact.astro
@@ -1,7 +1,7 @@
 <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 
-<section class="scroll-mt-24" id="contact">
-    <div class="px-8 md:px-12 py-2 max-w-2xl mx-auto">
+<section class="scroll-mt-24 py-20" id="contact">
+    <div class="px-8 md:px-12  max-w-2xl mx-auto">
         <div class="h-full bg-red-700 rounded-3xl text-center overflow-hidden p-8">
             <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Urquiza</h2>
             <div class="flex mt-8 justify-center space-x-4">
@@ -12,6 +12,9 @@
                 </span>
                     <span>+549 387505 1235</span>
                 </a>
+            </div>
+            <div class="flex mt-8 justify-center space-x-4">
+
                 <a href="tel:(0387) 4316036" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
@@ -29,10 +32,9 @@
     </div>
 
 
-
     <div class="px-8 md:px-12 py-2 max-w-2xl mx-auto">
         <div class="h-full bg-red-700 rounded-3xl text-center overflow-hidden p-8">
-            <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Urquiza</h2>
+            <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Garden Mall</h2>
             <div class="flex mt-8 justify-center space-x-4">
                 <a href="https://wa.me/543875051235" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
@@ -41,14 +43,8 @@
                 </span>
                     <span>+549 387505 1235</span>
                 </a>
-                <a href="tel:(0387) 4316036" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
-                <span class="mr-2">
-                    <i class="fas fa-phone-alt text-lg"></i>
-                </span>
-                    <span>+549 387431 6036</span>
-                </a>
             </div>
+
             <div class="mt-8 flex justify-center">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d905.4954334097738!2d-65.478574!3d-24.796079!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941be9a3802577b9%3A0x41c72f01dc5027bb!2sPastas%20Tamaro!5e0!3m2!1ses!2sar!4v1714420035530!5m2!1ses!2sar"
                         width="500" height="450" style="border:0 ;" allowfullscreen="" loading="lazy"
@@ -71,6 +67,11 @@
     </span>
                     <span>@tamaro_pastas</span>
                 </a>
+
+
+            </div>
+            <br>
+            <div class="flex justify-center space-x-4">
 
 
                 <a href="https://www.facebook.com/PastasTamaro" target="_blank"
