--- a/src/components/landing/Howitworks.astro
+++ b/src/components/landing/Howitworks.astro
@@ -143,15 +143,11 @@ import {designwork} from "../../data/designwork.json";
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4">Crema de leche, champignones y carne
-
-                                        </td>
+                                        <td class="px-6 py-4">Crema de leche, champignones y carne</td>
                                         <td class="px-6 py-4 text-right">$5000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Crema de leche, champignones y pollo
-
-                                        </td>
+                                        <td class="px-6 py-4">Crema de leche, champignones y pollo</td>
                                         <td class="px-6 py-4 text-right">$5000</td>
                                     </tr>
                                     </tbody>
