--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -5,7 +5,7 @@
         © 2024 Tamaro. Hecho con amor por <a
             href="https://allianzy.com/"
             class="text-sm text-black hover:text-blue-300"
-        >Allianzy Inc</a>.
+        >Allianzy</a>.
       </p>
     </nav>
   </div>
