--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@ import Faq from "@/components/landing/Faq.astro";
 import Cta from "@/components/global/Cta.astro";
 import Contact from "../components/landing/Contact.astro";
 ---
+<link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+
 <BaseLayout>
   <Hero />
   <Work />
