--- a/src/components/landing/Contact.astro
+++ b/src/components/landing/Contact.astro
@@ -1,4 +1,4 @@
-<link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
 <section class="scroll-mt-24 py-20" id="contact">
     <div class="px-8 md:px-12  max-w-2xl mx-auto">
