--- a/src/components/landing/Contact.astro
+++ b/src/components/landing/Contact.astro
@@ -10,17 +10,17 @@
                 <span class="mr-2">
                     <i class="fab fa-whatsapp text-lg"></i>
                 </span>
-                    <span>+549 387505 1235</span>
+                    <span>+549 387 505 1235</span>
                 </a>
             </div>
             <div class="flex mt-8 justify-center space-x-4">
 
-                <a href="tel:(0387) 4316036" target="_blank"
+                <a href="tel:03874316036" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
                     <i class="fas fa-phone-alt text-lg"></i>
                 </span>
-                    <span>+549 387431 6036</span>
+                    <span>+549 387 431 6036</span>
                 </a>
             </div>
             <div class="mt-8 flex justify-center">
@@ -36,12 +36,12 @@
         <div class="h-full bg-red-700 rounded-3xl text-center overflow-hidden p-8">
             <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Garden Mall</h2>
             <div class="flex mt-8 justify-center space-x-4">
-                <a href="https://wa.me/543875051235" target="_blank"
+                <a href="https://wa.me/543874660046" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
                     <i class="fab fa-whatsapp text-lg"></i>
                 </span>
-                    <span>+549 387505 1235</span>
+                    <span>+549 387 466 0046</span>
                 </a>
             </div>
 
@@ -60,7 +60,7 @@
         >
 
             <div class="flex justify-center space-x-4">
-                <a href="https://wa.me/543874660046" target="_blank"
+                <a href="https://www.instagram.com/tamaro_pastas/" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
     <span class="mr-2">
         <i class="fab fa-instagram text-lg "></i>
@@ -86,7 +86,7 @@
             <br>
             <div class="flex  justify-center">
 
-                <a href="mailo:tamaro-fratres@hotmail.com" target="_blank"
+                <a href="mailto:tamaro-fratres@hotmail.com" target="_blank"
                    class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
     <span class="mr-2">
         <i class="fas fa-envelope text-lg "></i>
