--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -12,9 +12,10 @@ import {designwork} from "../../data/designwork.json";
         </div>
 
 
-        <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start" role="option"
-             x-bind="disableNextAndPreviousButtons">
-            <img src="/bal.png" alt=""/>
+        <div class="items-center justify-center w-full flex flex-col py-8 shrink-0 snap-start"
+             role="option" x-bind="disableNextAndPreviousButtons">
+            <img src="/empanada.png" alt=""
+                 style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
         </div>
 
         <div class="bg-white mx-auto rounded-3xl">
