--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -123,7 +123,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/noquis.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -191,7 +191,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/ravioles.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -277,7 +277,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/canelones.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -353,7 +353,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/raviolon.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -421,7 +421,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/sorrentinos.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -488,7 +488,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/panzottis.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -555,7 +555,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/capresse.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -619,7 +619,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/fideos.png" alt=""
+                                    <img src="/agnolottis.png" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
