--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -48,7 +48,7 @@
                         class="flex-col flex-grow hidden py-12 md:py-0 md:flex md:items-end justify-center md:flex-row"
                 >
                     <ul
-                            class="space-y-2 list-none text-xs text-zinc-500 md:space-y-0 md:ml-auto items-center md:inline-flex justify-center text-center md:text-left gap-3"
+                            class="space-y-2 list-none  text-zinc-500 md:space-y-0 md:ml-auto items-center md:inline-flex justify-center text-center md:text-left gap-3"
                     >
                         <li>
                             <a href="#work" class="hover:text-black shrink-0">Pastas</a>
