--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,16 +4,16 @@ import { AstroSeo } from '@astrolib/seo';
 import Favicons from "./global/Favicons.astro";
 ---
 <AstroSeo
-  title="minimal"
-  description="We create websites that convert visitors into customers Design and development subscriptions for everyone. Pause or cancel anytime."
-  canonical="https://www.minimal.studio"
+  title="Tamaro"
+  description="Pastas artesanales"
+  canonical="https://www.tamaro.com.ar"
   openGraph={{
-    url: "https://www.minimal.studio",
-    title: "minimal",
-    description: "We create websites that convert visitors into customers Design and development subscriptions for everyone. Pause or cancel anytime.",
+    url: "https://www.tamaro.com.ar",
+    title: "Tamaro",
+    description: "Pastas artesanales",
     images: [
       {
-        url: "https://www.minimal.studio/opengraph/facebook.png",
+        url: "https://www.tamaro.com.ar/social.jpg",
         width: 1200,
         height: 630,
         alt: "Social open graph",
