--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,18 +16,18 @@ import Favicons from "./global/Favicons.astro";
         url: "https://www.tamaro.com.ar/social.jpg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "Social",
         type: "image/jpeg",
       },
       {
-        url: "https://www.minimal.studio/opengraph/twitter.png",
+        url: "https://www.tamaro.com.ar/social.jpg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "Twitter",
         type: "image/jpeg",
       },
-      { url: "https://www.minimal.studio/opengraph/facebook.png" },
-      { url: "https://www.minimal.studio/opengraph/twitter.png" },
+      { url: "https://www.tamaro.com.ar/social.jpg" },
+      { url: "https://www.tamaro.com.ar/social.jpg" },
     ],
     site_name: "minimal",
   }}
