--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -9,6 +9,6 @@
       </p>
     </nav>
   </div>
-  <img src="/footer.png" class="w-screen object-cover object-center">
+  <img src="/footer.webp" class="w-screen object-cover object-center">
 </footer>
 
