--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -54,7 +54,7 @@ import {designwork} from "../../data/designwork.json";
               <div class="text-sm text-zinc-500 p-4 pt-0">
                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                      role="option" x-bind="disableNextAndPreviousButtons">
-                  <img src="/flan.png" alt=""
+                  <img src="/flan.webp" alt=""
                        style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                 </div>
                 <br>
@@ -116,7 +116,7 @@ import {designwork} from "../../data/designwork.json";
               <div class="text-sm text-zinc-500 p-4 pt-0">
                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                      role="option" x-bind="disableNextAndPreviousButtons">
-                  <img src="/helado.png" alt=""
+                  <img src="/helado.webp" alt=""
                        style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                 </div>
                 <br>
