--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,5 +1,5 @@
 <section class="overflow-hidden relative">
-  <img src="/home.png" class="w-screen object-cover object-center">
+  <img src="/home.webp" class="w-screen object-cover object-center">
 
   <div class="flex flex-col items-center justify-center relative z-10">
     <img src="/logo.svg" class="w-100 mb-10 md:relative md:absolute md:bottom-12 mt-10 md:mt-0"> <!-- Agrega mt-8 solo en dispositivos móviles -->
