--- a/src/components/landing/Howitworks.astro
+++ b/src/components/landing/Howitworks.astro
@@ -55,7 +55,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/roja.png" alt=""
+                                    <img src="/roja.webp" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
@@ -125,7 +125,7 @@ import {designwork} from "../../data/designwork.json";
                             <div class="text-sm text-zinc-500 p-4 pt-0">
                                 <div class="items-center justify-center w-full flex flex-col shrink-0 snap-start"
                                      role="option" x-bind="disableNextAndPreviousButtons">
-                                    <img src="/especial.png" alt=""
+                                    <img src="/especial.webp" alt=""
                                          style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
                                 </div>
                                 <br>
