--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -2,7 +2,7 @@
   <div class="px-8 md:px-12 py-12 max-w-2xl mx-auto flex items-center justify-center"> <!-- Añadido items-center y justify-center para centrar horizontal y verticalmente -->
     <nav class="flex flex-col lg:flex-row gap-8">
       <p class="text-sm text-black text-center"> <!-- Añadido text-center para centrar horizontalmente -->
-        © 2024 Tamaro. Hecho con amor por <a
+        &copy; 2024 Tamaro. Hecho con amor por <a
             href="https://allianzy.com/"
             class="text-sm text-black hover:text-blue-300"
         >Allianzy</a>.
