--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -138,7 +138,7 @@ import {designwork} from "../../data/designwork.json";
                     <td class="px-6 py-4 text-right">$9000</td>
                   </tr>
                   <tr>
-                    <td class="px-6 py-4">Café con crema</td>
+                    <td class="px-6 py-4">Caf&eacute; con crema</td>
                     <td class="px-6 py-4 text-right">$9000</td>
                   </tr>
                   <tr>
