--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -33,7 +33,7 @@ import {designwork} from "../../data/designwork.json";
                 </thead>
                 <tbody class="divide-y divide-gray-200">
                 <tr>
-                    <td class="px-6 py-4">Empanadas Árabes (docena)</td>
+                    <td class="px-6 py-4">Empanadas &Aacute;rabes (docena)</td>
                     <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
