--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,41 @@ import Pricing from "@/components/landing/Pricing.astro";
 import Faq from "@/components/landing/Faq.astro";
 import Cta from "@/components/global/Cta.astro";
 import Contact from "../components/landing/Contact.astro";
+
 ---
+
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&display=swap">
+  <style>
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
+
+    :root {
+      font-family: 'Ibarra Real Nova', sans-serif;
+      font-feature-settings:
+          "liga" 1,
+          "calt" 1, /* Contextual Alternates */
+          "dlig" 1, /* Discretionary Ligatures */
+          "ss07" 1, /* fSquare punctuation */
+          "ss08" 1, /* Square quotes */
+          "zero" 1, /* Slashed zero */
+          "tnum" 1, /* Tabular numbers */
+          "cv03" 1, /* Open six */
+          "cv04" 1, /* Open nine */
+          "cv01" 1, /* Alternate one */
+          "cv09", /* Flat-top three */
+          "cv02" 1; /* Open 4 */
+    }
+
+    @supports (font-variation-settings: normal) {
+      /* Use variable font if supported */
+      :root {
+        font-family: 'Ibarra Real Nova', sans-serif;
+      }
+    }
+  </style>
+</head>
 
 <BaseLayout>
   <Hero />
