--- a/src/components/landing/Contact.astro
+++ b/src/components/landing/Contact.astro
@@ -6,7 +6,7 @@
             <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Urquiza</h2>
             <div class="flex mt-8 justify-center space-x-4">
                 <a href="https://wa.me/543875051235" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm  transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
                     <i class="fab fa-whatsapp text-lg"></i>
                 </span>
@@ -16,7 +16,7 @@
             <div class="flex mt-8 justify-center space-x-4">
 
                 <a href="tel:03874316036" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm  transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
                     <i class="fas fa-phone-alt text-lg"></i>
                 </span>
@@ -32,12 +32,12 @@
     </div>
 
 
-    <div class="px-8 md:px-12 py-2 max-w-2xl mx-auto">
+    <div class="px-8 md:px-12 py-6 max-w-2xl mx-auto">
         <div class="h-full bg-red-700 rounded-3xl text-center overflow-hidden p-8">
             <h2 class="text-5xl tracking-tighter font-normal md:text-4xl text-white">Sucursal Garden Mall</h2>
             <div class="flex mt-8 justify-center space-x-4">
                 <a href="https://wa.me/543874660046" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
                 <span class="mr-2">
                     <i class="fab fa-whatsapp text-lg"></i>
                 </span>
@@ -61,7 +61,7 @@
 
             <div class="flex justify-center space-x-4">
                 <a href="https://www.instagram.com/tamaro_pastas/" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
     <span class="mr-2">
         <i class="fab fa-instagram text-lg "></i>
     </span>
@@ -75,7 +75,7 @@
 
 
                 <a href="https://www.facebook.com/PastasTamaro" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
     <span class="mr-2">
         <i class="fab fa-facebook-f text-lg "></i>
     </span>
@@ -87,7 +87,7 @@
             <div class="flex  justify-center">
 
                 <a href="mailto:tamaro-fratres@hotmail.com" target="_blank"
-                   class="rounded-full px-4 border py-2 text-sm font-semibold transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
+                   class="rounded-full px-4 border py-2 text-sm transition-all flex items-center justify-between bg-white text-gray-500 h-10 border-gray-300 focus:ring-2 shadow-button shadow-gray-500/5 focus:ring-blue-950 focus:ring-offset-2 duration-200 ring-offset-gray-200 hover:shadow-none w-auto">
     <span class="mr-2">
         <i class="fas fa-envelope text-lg "></i>
     </span>
