--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -1,7 +1,7 @@
 ---
 import {designwork} from "../../data/designwork.json";
 ---
-<section class="scroll-mt-14" id="work">
+<section class="scroll-mt-24" id="work">
 
     <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
         <div class="p-8 bg-black rounded-3xl">
@@ -79,7 +79,7 @@ import {designwork} from "../../data/designwork.json";
                                         <td class="px-6 py-4 text-right">$7000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Fideos de Morrón</td>
+                                        <td class="px-6 py-4">Fideos de Morr&oacuten</td>
                                         <td class="px-6 py-4 text-right">$7000</td>
                                     </tr>
                                     </tbody>
@@ -96,7 +96,7 @@ import {designwork} from "../../data/designwork.json";
                         >
                             <div class="items-center flex justify-between text-black">
                                 <p class="text-lg tracking-tight text-black">
-                                    Ñoquis
+                                    &Ntildeoquis
                                 </p>
                                 <svg
                                         class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
@@ -132,7 +132,7 @@ import {designwork} from "../../data/designwork.json";
                                     <thead class="bg-red-700">
                                     <tr>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
-                                            Ñoquis
+                                            &Ntildeoquis
                                         </th>
                                         <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
                                             1 kg = 3 porciones
@@ -141,11 +141,11 @@ import {designwork} from "../../data/designwork.json";
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4">Ñoquis de papa</td>
+                                        <td class="px-6 py-4">&Ntildeoquis de papa</td>
                                         <td class="px-6 py-4 text-right">$7000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Ñoquis de espinaca</td>
+                                        <td class="px-6 py-4">&Ntildeoquis de espinaca</td>
                                         <td class="px-6 py-4 text-right">$7500</td>
                                     </tr>
                                     </tbody>
@@ -233,7 +233,7 @@ import {designwork} from "../../data/designwork.json";
                                         <td class="px-6 py-4 text-right">$7000</td>
                                     </tr>
                                     <tr>
-                                        <td class="px-6 py-4">Ricota, queso y jamón</td>
+                                        <td class="px-6 py-4">Ricota, queso y jam&oacuten</td>
                                         <td class="px-6 py-4 text-right">$7500</td>
                                     </tr>
                                     </tbody>
@@ -326,7 +326,7 @@ import {designwork} from "../../data/designwork.json";
                         >
                             <div class="items-center flex justify-between text-black">
                                 <p class="text-lg tracking-tight text-black">
-                                    Raviolón
+                                    Raviol&oacuten
                                 </p>
                                 <svg
                                         class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
@@ -362,7 +362,7 @@ import {designwork} from "../../data/designwork.json";
                                     <thead class="bg-red-700">
                                     <tr>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
-                                           Raviolón
+                                            Raviol&oacuten
                                         </th>
                                         <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
                                             1 kg = 3 porciones
@@ -439,7 +439,7 @@ import {designwork} from "../../data/designwork.json";
                                     </thead>
                                     <tbody class="divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4">Ricota, jamón y queso</td>
+                                        <td class="px-6 py-4">Ricota, jam&oacuten  y queso</td>
                                         <td class="px-6 py-4 text-right">$15000</td>
                                     </tr>
                                     <tr>
