--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 :root {
-  font-family: Inter, sans-serif;
+  font-family: Ibarra Real Nova, sans-serif;
   font-feature-settings:
   "liga" 1,
   "calt" 1, /* Contextual Alternates */
@@ -20,6 +20,7 @@
 @supports (font-variation-settings: normal) {
   /* Use variable font if supported */
   :root {
-    font-family: InterVariable, sans-serif;
+
+    font-family: Ibarra Real Nova, sans-serif;
   }
 }
