--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -12,7 +12,7 @@
                             class="text-black hover:text-black/50 gap-4 items-center tracking-tighter inline-flex font-bold ml-2 text-xl"
                             href="/" title="linke to main page"
                     >
-                        <img src="/logo.svg" class="size-10  object-cover object-center">
+                        <img src="/logo.svg" class="size-20  object-cover object-center">
                     </a>
                     <button
                             @click="open = !open"
@@ -65,7 +65,7 @@
                         <li class="shrink-0">
                             <a
                                     href="#contact"
-                                    class="py-2 w-auto px-4 border-2 h-8 focus:ring-2 rounded-full border-black bg-black/5 hover:bg-transparent text-black duration-200 focus:ring-offset-2 hover:text-black inline-flex items-center justify-center ring-2 focus:ring-black ring-transparent"
+                                    class="py-2 w-auto px-4  h-8 focus:ring-2 rounded-full border-black bg-black/5 hover:bg-red-700 text-black duration-200 focus:ring-offset-2 hover:text-white inline-flex items-center justify-center ring-2 focus:ring-black ring-transparent"
                             >
                                 Contacto</a
                             >
