--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -7,7 +7,7 @@
 
     <br>
     <h2 class="text-2xl tracking-tighter font-normal text-black text-center">
-      "De nuestra familia a la tuya"
+      De nuestra familia a la tuya
     </h2>
   </div>
 </section>
