--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -53,12 +53,12 @@ import {designwork} from "../../data/designwork.json";
                     <td class="px-6 py-4 text-right">$1000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Pascualina (docena)</td>
-                    <td class="px-6 py-4 text-right">$2500</td>
+                    <td class="px-6 py-4">Pascualina (por paquete)</td>
+                    <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Masa para lasagna (unidad - 200 gramos)</td>
-                    <td class="px-6 py-4 text-right">$2000</td>
+                    <td class="px-6 py-4">Masa para lasagna (por kilogramo)</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
                     <td class="px-6 py-4">Queso rallado (100 gramos)</td>
@@ -66,7 +66,7 @@ import {designwork} from "../../data/designwork.json";
                 </tr>
                 <tr>
                     <td class="px-6 py-4">Crema de leche (100gr)</td>
-                    <td class="px-6 py-4 text-right">$2000</td>
+                    <td class="px-6 py-4 text-right">$1600</td>
                 </tr>
                 </tbody>
             </table>
